infra/pyinfra-debug.log
  File "/home/allanbraun/projetos/homelab/infra/.venv/lib/python3.13/site-packages/pyinfra_cli/cli.py", line 243, in cli
    _main(*args, **kwargs)
    ~~~~~^^^^^^^^^^^^^^^^^
  File "/home/allanbraun/projetos/homelab/infra/.venv/lib/python3.13/site-packages/pyinfra_cli/cli.py", line 378, in _main
    can_diff, state, config = _handle_commands(
                              ~~~~~~~~~~~~~~~~^
        state, config, command, original_operations, operations
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    )
    ^
  File "/home/allanbraun/projetos/homelab/infra/.venv/lib/python3.13/site-packages/pyinfra_cli/cli.py", line 705, in _handle_commands
    state, config, operations = _prepare_deploy_operations(state, config, operations)
                                ~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/allanbraun/projetos/homelab/infra/.venv/lib/python3.13/site-packages/pyinfra_cli/cli.py", line 766, in _prepare_deploy_operations
    load_deploy_file(state, filename)
    ~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^
  File "/home/allanbraun/projetos/homelab/infra/.venv/lib/python3.13/site-packages/pyinfra_cli/util.py", line 235, in load_deploy_file
    _parallel_load_hosts(state, lambda: exec_file(filename), filename)
    ~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/allanbraun/projetos/homelab/infra/.venv/lib/python3.13/site-packages/pyinfra_cli/util.py", line 229, in _parallel_load_hosts
    raise result
  File "/home/allanbraun/projetos/homelab/infra/.venv/lib/python3.13/site-packages/pyinfra_cli/util.py", line 209, in load_file
    callback()
    ~~~~~~~~^^
  File "/home/allanbraun/projetos/homelab/infra/.venv/lib/python3.13/site-packages/pyinfra_cli/util.py", line 235, in <lambda>
    _parallel_load_hosts(state, lambda: exec_file(filename), filename)
                                        ~~~~~~~~~^^^^^^^^^^
  File "/home/allanbraun/projetos/homelab/infra/.venv/lib/python3.13/site-packages/pyinfra_cli/util.py", line 57, in exec_file
    code = compile(code_str, filename, "exec")
  File "setup_applications_script.py", line 59
    line=f'deb [arch={arch} signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/ubuntu {codename.} stable',
                                                                                                                      ^
SyntaxError: f-string: expecting '=', or '!', or ':', or '}'
